--- a/index.html
+++ b/index.html
@@ -6,18 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lee Quinette</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
+    <link rel="mask-icon" href="images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <header>
         <img src="images/logo.png" width="130">
+        <div>
         <h1>Lee Quinette</h1>
         <nav>
             <a href="about.html">About</a>
             <a href="gallery.html">Gallery</a>
         </nav>
+        </div>
     </header>
     <div class="favorites">
-    <img src="images/logo.png" width="500">
+    <img src="images/lee-image.jpeg" width="500">
         <p>UW-Eau Claire Undergraduate Student</p>
         <p>Major: English Education</p>
         <p>Minor: Multimedia Communications</p>
