Finished Portfolio Code

--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <img src="images/logo.png" width="130">
-        <div>
+        <div class="navs">
         <h1>Lee Quinette</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -28,12 +28,19 @@
         </div>
     </header>
     <div class="gallery">
+        <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/0L1TFSjiX4M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/PCn7_wpx68g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/r16zHYT8olw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/g-8cxpbuEHo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/HHpVXYLH9JQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lPdQGXTBQKI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <br>
     </div>
     <footer>
         <p>Lee Quinette</p>
