--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
         <img src="images/logo.png" width="130">
-        <div>
+        <div class="navs">
         <h1>Lee Quinette</h1>
         <nav>
             <a href="about.html">About</a>
@@ -39,6 +39,7 @@
         <p>Favorite book: We Are the Ants</p>
         <p>Favorite dessert: banana cake</p>
         <p>Favorite snack: animal crackers</p>
+        <br>
     </div>
     <footer>
         <p>Lee Quinette</p>
