--- a/about.html
+++ b/about.html
@@ -29,40 +29,41 @@
     </header>
     <div class="about">
         <section id="books">
-    <h2>About Lee</h2>
-        <p>Lee is from Muskego, Wisconsin and has traveled to Eau Claire to attend the University of Wisconsin Eau Claire. They enjoy spending time outside, editing videos, and doing jigsaw puzzles, but most of all, reading and writing. As a future English Language Arts teacher, Lee has a love for the subject that they hope to share with their students.</p>
+            <h2>About Lee</h2>
+            <p>Lee is from Muskego, Wisconsin and has traveled to Eau Claire to attend the University of Wisconsin Eau Claire. They enjoy spending time outside, editing videos, and doing jigsaw puzzles, but most of all, reading and writing. As a future English Language Arts teacher, Lee has a love for the subject that they hope to share with their students.</p>
             <img src="images/books.jfif" width="250" alt="stack of books">
         </section>
         <section id="eauclaire">
-        <h2>UW-Eau Claire</h2>
-        <h3>Housing</h3>
+            <h2>UW-Eau Claire</h2>
+            <h3>Housing</h3>
             <p>While a student, Lee has stayed involved in the campus community. Lee has worked in housing since their freshman year in a variety of positions. First as a Hall Council Eco Representative (volunteer), then student custodian, security worker, and front desk worker (paid). In their final two years at the University, Lee has worked as a Peer Counselor for the University's Living Learning Community (LLC) "The Rainbow Floors".</p>
             <p>"The Rainbow Floors" are a space and housing option for students in the LGBTQIA+ community to live in gender neutral housing. First located on the seventh floor of Towers Hall South, the LLC has now expanded to the eighth floor, as well as a wing in Oak Ridge Hall, and a floor in Suites Hall-the newest option and a option for gender neutral upper classmen housing.</p>
             <p>As a member of the LGBTQIA+ community themself, Lee lives and works on the Towers floors, supporting students and connecting them with resources both on and off campus.</p>
         </section>
         <section id="tv10">
-        <div>
-            <h3>TV-10</h3>
-            <p>Outside of work for housing, Lee is a part of TV-10, a student organization on campus. TV-10 is UW-Eau Claire's on campus and student run TV station. It provides many services to students such as an online streaming service, weekly production of original content, and live broadcasts of UW-Eau Claire sporting events.</p>
-            <p>As a part of the organization, Lee has been in a lot of different roles. First, Lee joined the advertisment team and creates a variety of social media posts for Instagram, Facebook, and TikTok. They use largely Adobe products to create these graphics and videos. Their second semester in the organization Lee got the job as 'Handful' host. Handful is one of TV-10's many original shows and is a variety show with no hard and fast structure-giving Lee a lot of freedom with the production of it. They created a loose organizational format for each week's show and instated recurring segments to give the show a cohesive feel throughout the semesters.</p>
+            <div>
+                <h3>TV-10</h3>
+                <p>Outside of work for housing, Lee is a part of TV-10, a student organization on campus. TV-10 is UW-Eau Claire's on campus and student run TV station. It provides many services to students such as an online streaming service, weekly production of original content, and live broadcasts of UW-Eau Claire sporting events.</p>
+                <p>As a part of the organization, Lee has been in a lot of different roles. First, Lee joined the advertisment team and creates a variety of social media posts for Instagram, Facebook, and TikTok. They use largely Adobe products to create these graphics and videos. Their second semester in the organization Lee got the job as 'Handful' host. Handful is one of TV-10's many original shows and is a variety show with no hard and fast structure-giving Lee a lot of freedom with the production of it. They created a loose organizational format for each week's show and instated recurring segments to give the show a cohesive feel throughout the semesters.</p>
             </div>
                 <img src="images/tv10.jpg" alt="tv10" width="300">
           
             </section>
             <br>
             <section id="ytc">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/zUwKicQ_QUg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <p>This is one example of a segment that Lee created called 'Yeah, that checks' in which they have a guest on to discuss a handful of memes or meme-like-images and decide whether they 'check' out or not.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zUwKicQ_QUg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <p>This is one example of a segment that Lee created called 'Yeah, that checks' in which they have a guest on to discuss a handful of memes or meme-like-images and decide whether they 'check' out or not.</p>
             </section>
             <br>
             <section id="program">
-            <p>After two semesters as Handful host, the opportunity arose for Lee to apply to a different position-one they had been wanting for awhile. While deciding to leave Handful for another host to run was a hard and trying decision, Lee ultimately decided it would be best for them and the organization. Now as the Programming Director, Lee is in charge of the editing and posting of all the created shows in the organization. They hired programmers for each show, connected the dots between show host, show director, and show programmer, to ensure a smooth creation process, and sorted through the bumps in learning to upload and troubleshoot show related content.</p>
+                <p>After two semesters as Handful host, the opportunity arose for Lee to apply to a different position-one they had been wanting for awhile. While deciding to leave Handful for another host to run was a hard and trying decision, Lee ultimately decided it would be best for them and the organization. Now as the Programming Director, Lee is in charge of the editing and posting of all the created shows in the organization. They hired programmers for each show, connected the dots between show host, show director, and show programmer, to ensure a smooth creation process, and sorted through the bumps in learning to upload and troubleshoot show related content.</p>
             </section>
+        <!--Missing closing div here for the div on line 30. -->
         <footer>
-            <p>Lee Quinette</p>
+            <p>Lee Quinette</p>ß
             <p>(419) 265-4265</p>
             <p>leemail@gmail.com</p>
             <p>642 University Dr Eau Claire, WI</p>
         </footer>
-</body>
+    </body>
 </html>
